style: fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -113,17 +113,12 @@ body {
 /*Featured work section*/
 
 
-.featured-work-container {
-  display: flex;
-  flex-wrap: wrap;
 
-}
 
 /*Each item featured*/
 .featured-item {
   width: 50%;
   padding: 5px;
-  box-sizing: border-box;
 }
 
 
@@ -133,6 +128,11 @@ body {
   padding-left: 10px;/*So the text is offset a little to the right*/
   color: #bbb;
   font-weight: 400; /*Normal font weight*/
+}
+
+.featured-items-container {
+  width: 100%;
+  display: flex;
 }
 
 .featured-item-img {
@@ -153,6 +153,15 @@ body {
   text-align: center;
   display: block; /*Display as block so it can be dynamically sized*/
   font-size: 0.8em;
+}
+/*Clear the paddings of the featured items on both sides*/
+
+.featured-item:first-child {
+  padding-left: 0;
+}
+
+.featured-item:last-child {
+  padding-right: 0;
 }
 
 
@@ -237,10 +246,10 @@ body {
     margin-left: -5px;
   }
 
-  .featured-item.offset-padding {
-    padding-left: 0;
-  } /*Quick fix for the left margin of the 1st featured item  */
 }
+
+
+/*Clear the paddings of the featured items on both sides*/
 
 /*No margin for headings*/
 h1, h2, h3, h4, h5, h6 {
